# litert_yolo_cpp

./: CMakeCache.txt  CMakeLists.txt  README.md  main.c  main.cpp
